# oxide-auth

.github/workflows/: release.yml
oxide-auth-async/src/: code_grant.rs  primitives.rs
oxide-auth-async/src/endpoint/: authorization.rs
oxide-auth-async/src/tests/: mod.rs
oxide-auth-axum/examples/axum-example/: Cargo.toml
oxide-auth-axum/examples/axum-example/src/: main.rs  support.rs
oxide-auth-db/src/primitives/: db_registrar.rs
oxide-auth/src/: lib.rs
oxide-auth/src/code_grant/: accesstoken.rs  authorization.rs  client_credentials.rs  refresh.rs
oxide-auth/src/code_grant/extensions/: pkce.rs
oxide-auth/src/endpoint/: authorization.rs  mod.rs  query.rs
oxide-auth/src/endpoint/tests/: access_token.rs  authorization.rs  client_credentials.rs  mod.rs  pkce.rs  refresh.rs
oxide-auth/src/frontends/simple/extensions/: list.rs  pkce.rs
oxide-auth/src/primitives/: authorizer.rs  generator.rs  grant.rs  issuer.rs  registrar.rs
