[package]
name = "axum-example"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
env_logger = "0.9"
futures = "0.3"
oxide-auth = { version = "0.6.0", path = "./../../../oxide-auth" }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
url = "2"
serde_urlencoded = "0.7"
tokio = "1.16.1"
axum = { version = "0.8.4", features = ["macros"] }
oxide-auth-axum = { version = "0.6.0", path = "./../.." }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing-subscriber = "0.3.19"
